--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -4,4 +4,4 @@ distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 #distributionUrl=https\://services.gradle.org/distributions/gradle-2.0-bin.zip
-distributionUrl=file:///D:/MCWorkspace/OriginOfPlanetCore/gradle-2.0-bin.zip
+distributionUrl=file:///D:/MCWorkspace/gradle-2.0-bin.zip
