--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,28 @@
-.idea/
-gradle/
-*.gradle
+.gradle/
+eclipse/
+.settings/
+.classpath
+.project
+.metadata/
+bin/
+out/
+libs/
+CREDITS-fml.txt
+Core-Mod.iml
+Core-Mod.ipr
+Core-Mod.iws
+LICENSE-fml.txt
+MinecraftForge-Credits.txt
+MinecraftForge-License.txt
+README.txt
+forge-1.7.10-10.13.2.1291-changelog.txt
+CoreMod.iml
+CoreMod.ipr
+CoreMod.iws
+Idea.bat
+SetupDevWorkspaces.bat
 *.iml
-*.txt
-*.bat
+*.ipr
+*.iws
+.idea/
+workspace.xml
