--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,77 @@
-.gradle/
-eclipse/
-.settings/
-.classpath
-.project
-.metadata/
+### Windows ###
+
+thumbs.db
+*.db
+
+### Java ###
+
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.txt
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+### Eclipse ###
+
+*.pydevproject
+.metadata
+.gradle
 bin/
-out/
-libs/
-CREDITS-fml.txt
-Core-Mod.iml
-Core-Mod.ipr
-Core-Mod.iws
-LICENSE-fml.txt
-MinecraftForge-Credits.txt
-MinecraftForge-License.txt
-README.txt
-forge-1.7.10-10.13.2.1291-changelog.txt
-CoreMod.iml
-CoreMod.ipr
-CoreMod.iws
-Idea.bat
-SetupDevWorkspaces.bat
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+/eclipse
+
+# Eclipse Core
+.project
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# Java annotation processor (APT)
+.factorypath
+
+# PDT-specific
+.buildpath
+
+# sbteclipse plugin
+.target
+
+# TeXlipse plugin
+.texlipse
+
+### Intellij IDEA ###
+
 *.iml
 *.ipr
 *.iws
+
 .idea/
-workspace.xml
+.idea_modules/
+
+/out/
+gradle/wrapper/gradle-wrapper.properties
+gradlew
+gradlew.bat
