预备上传群峦

--- a/build.gradle
+++ b/build.gradle
@@ -26,20 +26,23 @@ minecraft {
     runDir = "idea"
 }
 
+repositories {
+    maven { // The repo from which to get waila
+        name "Mobius Repo"
+        url "http://mobiusstrip.eu/maven"
+    }
+    maven { // the repo from which to get NEI and stuff
+        name 'CB Repo'
+        url "http://chickenbones.net/maven/"
+    }
+}
+
 dependencies {
-    // you may put jars on which you depend on in ./libs
-    // or you may define them like so..
-    //compile "some.group:artifact:version:classifier"
-    //compile "some.group:artifact:version"
-      
-    // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // for more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
+	// Forcing version numbers for everything and using NO-NEI WAILA since the "transitive dependency resolution (gradle magic)" is currently borked.
+	compile "codechicken:CodeChickenCore:1.7.10-1.0.4.35:dev"
+	compile "codechicken:CodeChickenLib:1.7.10-1.1.3.127:dev"
+	compile "codechicken:NotEnoughItems:1.7.10-1.0.4.95:dev"
+	compile "mcp.mobius.waila:Waila:1.5.11-RC2-NONEI_1.7.10"
 }
 
 processResources
@@ -59,4 +62,11 @@ processResources
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
+}
+jar {
+    manifest.attributes(
+            'FMLCorePlugin': 'com.bioxx.tfc.TFCASMLoadingPlugin',
+            'FMLCorePluginContainsFMLMod': 'true',
+            'FMLAT': 'tfc_at.cfg'
+    )
 }
