--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ archivesBaseName = "OriginOfPlanetCore"
 
 minecraft {
     version = "1.7.10-10.13.4.1558-1.7.10"
-    runDir = "idea"
+    runDir = "eclipse"
 }
 
 repositories {
@@ -45,8 +45,7 @@ dependencies {
 	compile "mcp.mobius.waila:Waila:1.5.11-RC2-NONEI_1.7.10"
 }
 
-processResources
-{
+processResources {
     // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
@@ -63,10 +62,15 @@ processResources
         exclude 'mcmod.info'
     }
 }
+
 jar {
     manifest.attributes(
             'FMLCorePlugin': 'com.bioxx.tfc.TFCASMLoadingPlugin',
             'FMLCorePluginContainsFMLMod': 'true',
             'FMLAT': 'tfc_at.cfg'
     )
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
